ImageBitmapRenderingContext.webidl does not define canvas attribute
Categories
(Core :: Graphics: Canvas2D, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox97 | --- | fixed |
People
(Reporter: guest271314, Assigned: aosmond)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux i686) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/80.0.3983.2 Chrome/80.0.3983.2 Safari/537.36
Steps to reproduce:
At about:config set gfx.offscreen.enabled to true.
Create HTML canvas element and OffscreenCanvas instances.
For canvas execute transferControlToOffscreen(). Set OffscreenCanvas context to ImageBitmapRenderingContext.
Actual results:
ImageBitmapRenderingContext canvas attribute is undefined at Firefox 70, Nightly 73.
Expected results:
ImageBitmapRenderingContext should have canvas attribute set to HTMLCanvasElement or OffscreenCanvas.
https://html.spec.whatwg.org/multipage/canvas.html#imagebitmaprenderingcontext
interface ImageBitmapRenderingContext {
readonly attribute (HTMLCanvasElement or OffscreenCanvas) canvas;
void transferFromImageBitmap(ImageBitmap? bitmap);
};
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
Comment 3•4 years ago
|
||
| bugherder | ||
Description
•