Bug 1603339 - Add canvas attribute to ImageBitmapRenderingContext. r=lsalzman,emilio

Differential Revision: https://phabricator.services.mozilla.com/D133807