dom/canvas/ImageBitmapRenderingContext.h
@@ -54,6 +54,9 @@ class ImageBitmapRenderingContext final
 
   NS_DECL_CYCLE_COLLECTION_SCRIPT_HOLDER_CLASS(ImageBitmapRenderingContext)
 
+  void GetCanvas(
+      Nullable<OwningHTMLCanvasElementOrOffscreenCanvas>& retval) const;
+
   void TransferImageBitmap(ImageBitmap& aImageBitmap);
   void TransferFromImageBitmap(ImageBitmap* aImageBitmap);
 
