dom/webidl/HTMLCanvasElement.webidl
@@ -13,6 +13,8 @@
 interface nsISupports;
 interface Variant;
 
+typedef (HTMLCanvasElement or OffscreenCanvas) CanvasSource;
+
 [Exposed=Window]
 interface HTMLCanvasElement : HTMLElement {
   [HTMLConstructor] constructor();
